WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233794
[JSC] shell's $.globalObjectFor is not safe for non object cells
https://bugs.webkit.org/show_bug.cgi?id=233794
Summary
[JSC] shell's $.globalObjectFor is not safe for non object cells
Yusuke Suzuki
Reported
2021-12-02 17:32:01 PST
[JSC] shell's $.globalObjectFor is not safe for non object cells
Attachments
Patch
(2.42 KB, patch)
2021-12-02 17:32 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-12-02 17:32:46 PST
Created
attachment 445798
[details]
Patch
EWS
Comment 2
2021-12-02 20:24:51 PST
Committed
r286478
(
244817@main
): <
https://commits.webkit.org/244817@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445798
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-02 20:26:04 PST
<
rdar://problem/86001467
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug