[JSC] shell's $.globalObjectFor is not safe for non object cells https://bugs.webkit.org/show_bug.cgi?id=233794

Reviewed by Saam Barati.

JSTests:

* stress/dollar-global-object.js: Added.

Source/JavaScriptCore:

Only Object cells can have Structures having JSGlobalObject.

* jsc.cpp:
(JSC_DEFINE_HOST_FUNCTION):



Canonical link: https://commits.webkit.org/244817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286478 268f45cc-cd09-0410-ab3c-d52691b4dbfc